Frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
    - name: frontend
      protocol: TCP
      port: 80
      targetPort: 5000
