Frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "backend-ingress"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "frontend-service"
              servicePort: 30000
